<resources>/
    <string name="app_name">SoftMasters Dawuro</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This app needs permissions for CAMERA, VIDEO, AUDIO, INTERNET and LOCATION.</string>
    <string name="camera_permission">This app needs permissions for CAMERA</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Intro Message</string>
    <string name="no_record_found">No Record Found</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="googleMapsApiKeyOld">AIzaSyDnWFDX_NPuWEAdLts3d4T65oP5GgYf5BQ</string>
    <string name="googleMapsApiKeyNew">AIzaSyA2tMDNL16_hH0SlyRxg09J7B6piysevog</string>
    <string name="telephone">Telephone #</string>
    <string name="comment">Comments</string>
    <string name="image_picture">Picture Button</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="camera_permission_confirmation">This app needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>

    <string name="enter_message_hint">Comments or other info. </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="telephone_hint"> To follow, please provide telephone #. </string>
    <string name="sent_messages">Sent Messages</string>
    <string name="hse_no">House #</string>
    <string name="dob">Date of Birth</string>
    <string name="phone">Phone #</string>
    <string name="website">Website</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="tin_no">Tin #</string>
    <string name="person_of_interest">Person of Interest</string>
    <string name="person_of_interest_telephone">Person of Interest Telephone #</string>
    <string name="email">Email</string>
    <string name="sender_to_follow">To Follow, Kindly Enter Your Details</string>
    <string name="image">Image</string>
    <string name="title_activity_signin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions.
    </string>

    <string name="no_data_found">No record found.</string>
    <string name="help">Support</string>
    <string name="vicinity">Location</string>
    <string name="first_slide">Softmasters dawuro is an effective application to monitor humans</string>
    <string name="second_slide">Second one information</string>
    <string name="third_slide">Third one information</string>

</resources>
