<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.softmasters.dawuro.activities.FullPreviewActivity">

    <ScrollView
        android:id="@+id/scroll_full_preview"
        android:layout_width="match_parent"
        android:layout_above="@+id/btnSendFullPreview"
        android:layout_height="wrap_content">

        <!--fillViewport=true-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/lpics_container"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/colorGrey"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/linearPictures">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="wrap_content"
                        android:layout_height="120dp">

                    </android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/no_data_found" />
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/imageCapture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="14dp"
                    android:gravity="right"
                    android:layout_alignParentRight="true"
                    android:elevation="10dp"
                    android:layout_marginTop="4dp">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/add_white"/>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp">

                <EditText
                    android:id="@+id/editCommentsPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/record_audio"
                    android:layout_toStartOf="@+id/record_audio"
                    android:background="@drawable/bg_white"
                    android:hint="Comments"
                    android:inputType="textMultiLine"
                    android:paddingBottom="@dimen/space_big"
                    android:paddingLeft="@dimen/space_big"
                    android:paddingRight="50dp"
                    android:paddingTop="@dimen/space_big"
                    android:theme="@style/messageEditText"
                    />
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/record_audio"
                    android:src="@drawable/microphone"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/lpics_container"
                android:layout_margin="6dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="OFFENDER (If known)"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editPersonOfInterest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/linearPictures"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="text"
                        android:theme="@style/messageEditText"/>

                    <EditText
                        android:id="@+id/editPOIPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/editPersonOfInterest"
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="Telephone"
                        android:inputType="phone"
                        android:theme="@style/messageEditText"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnSendFullPreview"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/two"
                android:layout_margin="6dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textFollow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="SENDER (Required to follow )"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/editSenderName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textFollow"
                        android:ems="10"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:theme="@style/messageEditText"/>

                    <EditText
                        android:id="@+id/editSenderPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:digits="0123456789"
                        android:layout_below="@+id/editSenderName"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:theme="@style/messageEditText"/>

                    <EditText
                        android:id="@+id/editSenderEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/editSenderPhone"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:theme="@style/messageEditText"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnSendFullPreview"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:text="@string/send"
        android:textColor="@android:color/white"/>


</RelativeLayout>
